Fix quote spacing and alignment

--- a/css/randomquote.less
+++ b/css/randomquote.less
@@ -107,7 +107,7 @@
     position: relative;
     width: 310px;
     padding: 10px;
-    top: 30px;
+    top: 50px;
     left: 230px;
     font-family: 'Roboto',sans-serif;
     font-size: 1.2em;
